[workspace]
members = ["cli", "eth", "jsonrpc", "oci", "proto", "wasm", "shaker"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.1"
homepage = "https://lyquor.xyz/"
repository = "https://github.com/lyquor-labs/ldk"
license = "Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(rust_analyzer)'] }

[workspace.lints.clippy]
# Always-deny footguns (zero occurrences today; these are regression guards).
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
rc_mutex = "deny"
mutex_atomic = "deny"
lossy_float_literal = "deny"
float_cmp_const = "deny"
empty_drop = "deny"
string_add = "deny"
wildcard_dependencies = "deny"
# Style/perf cleanups kept clippy-clean (CI gates on `-D warnings`, so `warn` is
# blocking in CI; promote to `deny` if you want the same failure locally).
uninlined_format_args = "warn"
use_self = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
match_same_arms = "warn"
or_fun_call = "warn"
manual_string_new = "warn"
needless_continue = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
range_plus_one = "warn"
stable_sort_primitive = "warn"
unnested_or_patterns = "warn"
bool_to_int_with_if = "warn"
collapsible_else_if = "warn"
from_iter_instead_of_collect = "warn"

[workspace.dependencies]
alloy-json-abi = { version = "1.6", default-features = false }
alloy-sol-types = { version = "1.6", default-features = false }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8" }
bytes = "1.11"
clap = { version = "4.6.1" }
derive_more = { version = "2.1", features = ["debug"] }
futures = "0.3"
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http2", "client", "server"] }
jsonrpsee = { version = "0.26" }
jsonrpsee-client-transport = { version = "0.26", default-features = false }
jsonrpsee-ws-client = { version = "0.26", default-features = false }
k256 = { version = "0.13", default-features = false }
lyquid = { version = "0.2.1" }
lyquor-cli = { path = "cli", version = "0.2.1" }
lyquor-eth = { path = "eth", version = "0.2.1" }
lyquor-jsonrpc = { path = "jsonrpc", version = "0.2.1" }
lyquor-oci = { path = "oci", version = "0.2.1" }
lyquor-primitives = { version = "0.2.1" }
lyquor-proto = { path = "proto", version = "0.2.1" }
lyquor-wasm = { path = "wasm", version = "0.2.1" }
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
pbjson = "0.9"
pbjson-build = "0.9"
proc-macro2 = "1.0.106"
prost = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3.2"
quote = "1.0"
reqwest = { version = "0.13.3", default-features = false }
rustls = { version = "0.23", features = ["aws_lc_rs"], default-features = false }
rustls-pki-types = { version = "1.14" }
rustls-platform-verifier = { version = "0.7", default-features = false }
semver = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.11", default-features = false }
tar = "0.4.46"
tempfile = { version = "3.27" }
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-rustls = { version = "0.26" }
tokio-util = { version = "0.7", features = ["rt", "time"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.23"
wasmparser = "0.252"
xz2 = { version = "0.1.7", features = ["static"] }
