[package]
name = "lyquor-eth"
repository = "https://github.com/lyquor-labs/toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "Shared Ethereum helpers for Lyquor crates."

[dependencies]
alloy-consensus = "2.0"
alloy-signer = "2.0"
alloy-signer-local = "2.0"
alloy-sol-types.workspace = true
anyhow.workspace = true
k256 = { workspace = true, default-features = false, features = ["ecdsa", "std"] }
lyquor-jsonrpc.workspace = true
lyquor-primitives.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
