[package]
name = "lyquor-jsonrpc"
repository = "https://github.com/lyquor-labs/toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "JSON-RPC client and server for Ethereum"

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client-core", "tracing"] }
jsonrpsee-client-transport = { workspace = true, features = ["ws"] }
jsonrpsee-ws-client.workspace = true
lyquor-primitives.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tokio.workspace = true
tokio-rustls.workspace = true
tokio-util.workspace = true
tracing.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
