[package]
name = "lyquor-proto"
description = "gRPC/JSON service definitions for the Lyquor node API."
repository = "https://github.com/lyquor-labs/toolchain"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
lyquor-primitives = { workspace = true }
pbjson = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
pbjson-build = { workspace = true }
proc-macro2 = { workspace = true }
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
quote = { workspace = true }
tonic-prost-build = { workspace = true }
heck = { version = "0.5" }

[lints]
workspace = true
